--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-list-view",
-  "version": "0.0.4",
+  "version": "0.0.6-alpha.1",
   "authors": [
     "mysterlune <mysterlune@gmail.com>"
   ],
@@ -22,6 +22,6 @@
     "tests"
   ],
   "dependencies": {
-    "ember": "~1.8.0"
+    "ember": "~1.9.0"
   }
 }
